# lib/server/endpoints.js
@@ -5,5 +5,10 @@ module.exports = {
   'POST /rfc/verify': {
     middleware: [Middleware.authPolicy],
     action: RfcController.verify
+  },
+
+  'POST /rfc/generate': {
+    middleware: [Middleware.authPolicy],
+    action: RfcController.generate
   }
 };
